--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 //    firebase
     implementation 'com.google.firebase:firebase-database:20.2.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.6.0'
     def ktor_version = "2.3.0"
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -112,5 +113,10 @@ dependencies {
 
 //    constraint
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+
+//    material icons
+
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 
 }
